removed logging, fix for results being too short

--- a/web/static/css/search.css
+++ b/web/static/css/search.css
@@ -43,13 +43,14 @@ body {
 
 .result {
     width:96%;
+    max-width:900px;
+    min-height:50px;
     margin:10px;
     padding:1%;
     background:var(--secondary-color);
-    max-width:900px;
     border-radius:10px;
     box-shadow:0px 2px 4px rgba(0,0,0,0.25);
-    transition: margin-bottom 0.2s, box-shadow 0.2s;
+    transition:margin-bottom 0.2s, box-shadow 0.2s;
 }
 
 .result:hover {
